# redis-celery

./: .gitignore  LICENSE  c_celery_instroduction.ipynb  d_celery_installation_guide.ipynb  main.py  pyproject.toml
Redis/: a_introduction.ipynb  b_installation_guide.ipynb
docker/: docker-compose.yml
docker/redis-data/: dump.rdb
docker/redis-data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
