[project]
name = "redis-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.13.0",
    "asyncpg[gssauth]==0.29.0",
    "azure-identity>=1.25.0",
    "azure-storage-blob>=12.26.0",
    "bcrypt==4.0.1",
    "celery==5.3.4",
    "email-validator==2.1.0",
    "ensure>=1.0.4",
    "fastapi[standard]==0.104.1",
    "flower==2.0.1",
    "google-api-python-client==2.108.0",
    "google-auth==2.25.2",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.1.0",
    "httpx==0.25.2",
    "ipykernel>=6.30.1",
    "jinja2==3.1.2",
    "jose>=1.0.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-experimental>=0.0.61",
    "langchain-milvus>=0.1.1",
    "langchain-openai>=0.1.14",
    "langchain-pymupdf4llm>=0.4.1",
    "langgraph>=0.1.5",
    "langgraph-checkpoint-redis>=0.0.8",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.11.0",
    "pyjwt==2.8.0",
    "pymilvus>=2.4.9",
    "pymupdf4llm>=0.0.27",
    "pyodbc>=5.2.0",
    "pyppeteer>=0.0.25",
    "python-box>=7.3.2",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "pyyaml>=6.0.2",
    "redis==5.0.1",
    "sqlalchemy==2.0.23",
    "starlette>=0.27.0",
    "streamlit>=1.50.0",
    "tiktoken>=0.11.0",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
]
